# sapoty-net

./: Cargo.toml  README.md
migrations/2021-07-28-144952_add_reviews/: up.sql
migrations/2021-09-06-051643_create_customers/: up.sql
migrations/2021-09-15-165741_create_users/: up.sql
src/: errors.rs  handlers.rs  main.rs  schema.rs
src/authentication/: mod.rs  routes.rs  services.rs
src/controller/: users.rs
src/customer/: mod.rs  models.rs  routes.rs
src/database/: mod.rs
src/ingres/: models.rs  routes.rs
src/models/: users.rs
src/post/: mod.rs  models.rs  routes.rs
src/publisher/: models.rs  routes.rs
src/review/: models.rs  routes.rs
src/stock/: mod.rs  models.rs  routes.rs
src/student/: models.rs  routes.rs
src/utils/: utils.rs
templates/: customers.html  elm.html  index.html  load.html  register.html  registration.html
templates/css/: style.css
templates/js/: script.js
templates/public/js/: elm.js  script.js
