[package]
name = "sapoty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3.1"
actix-multipart = "0.3.0"
actix-storage = {version = "0.2.0", features = ["serde-json"]}
actix-storage-dashmap = {version = "0.2.0"}
actix-storage-hashmap = {version = "0.2.0"}
actix-storage-redis = {version = "0.2.0"}
actix-storage-sled = {version = "0.2.0"}
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-web-httpauth = "0.5.1"
#actix-web-validator = "2.1.1"
askama = "0.10.5"
askama_actix = "0.11.1"
calamine = "0.18.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
diesel = { version = "1.4.7", features = ["postgres", "uuidv07","r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.16"
image = "0.23.14"
image-base64 = "0.1.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
openssl = "0.10.35"
qrcode = "0.12.0"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
rust-argon2 = "0.8.3"
rust-embed = "6.0.1"
sanitize-filename = "0.3.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sha256 = "1.0.2"
sparkpost = "0.5.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.14.0"
validator_derive = "0.14.0"
bcrypt = "0.10.1"
actix-rt = "2.2.0"
actix-cors = "0.5.4"
mobc-postgres = "0.7.0"
mobc = "0.7.3"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]
